--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         <li class="next-part">finnish basic</li>
       </ul>
     </div>
+    <div class="comment-field-flex">
+      <div class="leave-comment">Please leave a comment:</div>
+<div id="comments-list"></div>
+<p>
+<input id="comment-field"></input>
+<button id="comment-btn">Comment</button>
+</p>
+</div>
 
      <iframe width="560" height="315" src="https://www.youtube.com/embed/9ZfN87gSjvI" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -119,9 +127,9 @@
       
   </footer>
    
-    
+  <script src="script.js"></script>  
   </body>
-  <script src="scripts.js"></script>
+  
   
   
 </html>
